[gd_scene load_steps=2 format=3 uid="uid://m3j5etlqha77"]

[ext_resource type="Script" uid="uid://dqy50s4pgqqda" path="res://scripts/ui/main_menu.gd" id="1_n43md"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n43md")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.4, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Love & Lichens"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 160.0
offset_right = 250.0
offset_bottom = 190.0
grow_horizontal = 2
text = "A Tale of Environmental Science and Romance"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Load Game"

[node name="OptionsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Quit"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "v0.1.0"
horizontal_alignment = 2
